--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming soon</title>
+    <link rel="stylesheet" href="./css/content.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/hero.css">
@@ -27,7 +28,26 @@
     </div>
     <main class="container">
         <div class="row">
-        MAIN CONTENT
+        <div class="left">
+            <h2>About startup</h2>
+            <p>Lorem, ipsum dolor sit amet <a href="#">Matrox</a> adipisicing elit. Culpa ipsam laborum autem expedita, vitae aperiam suscipit exercitationem corporis eligendi velit.</p>
+            <div class="progred-bar">
+                PROGRES BAR
+            </div>
+            <div class="progred-bar">
+                PROGRES BAR
+            </div>
+            <div class="progred-bar">
+                PROGRES BAR
+            </div>
+        </div>
+        <div class="right">
+            <h2>Have any question?</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas nulla id <a href="mailto:email@gmail.com">email@gmail.com</a> sapiente architecto possimus eveniet commodi dicta velit. Repudiandae!</p>
+            <div class="message">
+                MESSAGE FORM
+            </div>
+        </div>
         </div>
     </main>
     <footer class="container">
