--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming soon</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/hero.css">
     <link rel="stylesheet" href="./css/content.css">
@@ -53,27 +54,13 @@
     </main>
     <footer class="container">
        <div class="row">
-            <a href="" class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
-            <a href=""  class="social-link">
-                <img src="" alt="">
-            </a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-dribbble"></a>
+            <a href="#" class="fa fa-tumblr"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-rss"></a>
         </div> 
         <div class="row">
         <img src="./img/matroxlogo.png" alt="Footer Logo" class="footer-logo">
