--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/hero.css">
     <link rel="stylesheet" href="./css/content.css">
+    <link rel="stylesheet" href="./css/progress-bar.css">
     <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
@@ -48,14 +49,32 @@
         <div class="left">
             <h2>About startup</h2>
             <p>Lorem, ipsum dolor sit amet <a href="#">Matrox</a> adipisicing elit. Culpa ipsam laborum autem expedita, vitae aperiam suscipit exercitationem corporis eligendi velit.</p>
-            <div class="progred-bar">
-                PROGRES BAR
+            <div class="progress-bar">
+                <div class="texts">
+                    <div class="title">UX Design</div>
+                    <div class="value">90%</div>
+                </div>
+                <div class="progress">
+                    <div class="bar" style="width: 90%;"></div>
+                </div>
             </div>
-            <div class="progred-bar">
-                PROGRES BAR
+            <div class="progress-bar">
+                <div class="texts">
+                    <div class="title">Web Design</div>
+                    <div class="value">50%</div>
+                </div>
+                <div class="progress">
+                    <div class="bar" style="width: 50%;"></div>
+                </div>
             </div>
-            <div class="progred-bar">
-                PROGRES BAR
+            <div class="progress-bar">
+                <div class="texts">
+                    <div class="title">Web Development</div>
+                    <div class="value">86%</div>
+                </div>
+                <div class="progress">
+                    <div class="bar" style="width: 86%;"></div>
+                </div>
             </div>
         </div>
         <div class="right">
